--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             const div = document.createElement('div');
             div.className = "mb-2 break-words";
             if (isInput) {
-                div.innerHTML = `<span class="text-green-500 mr-2">root@friend:~$</span><span class="text-gray-300">${html}</span>`;
+                div.innerHTML = `<span class="text-green-500 mr-2">guest@friend:~$</span><span class="text-gray-300">${html}</span>`;
             } else {
                 div.innerHTML = `<div class="mt-1 mb-4 text-green-400 animate-fade-in w-full">${html}</div>`;
             }
@@ -186,17 +186,17 @@
                             <!-- WHOAMI MOVED TO TOP -->
                             <button class="text-left group p-3 border border-green-900/50 hover:bg-green-500 hover:text-black transition-all duration-300" onclick="runCmd('whoami')">
                                 <span class="font-bold block">COMMAND: WHOAMI</span>
-                                <span class="text-xs opacity-70 group-hover:text-black">Identify User</span>
+                                <span class="text-xs opacity-70 group-hover:text-black">About me</span>
                             </button>
 
                             <button class="text-left group p-3 border border-red-600/50 bg-red-950/10 hover:bg-red-600 hover:text-black transition-all duration-300" onclick="runCmd('red')">
                                 <span class="font-bold block flex items-center gap-2"><i data-lucide="sword" class="w-4 h-4"></i> COMMAND: RED</span>
-                                <span class="text-xs opacity-70 group-hover:text-black">Show Offensive Security Skills</span>
+                                <span class="text-xs opacity-70 group-hover:text-black">View Offensive Security Skills</span>
                             </button>
                             
                             <button class="text-left group p-3 border border-blue-600/50 bg-blue-950/10 hover:bg-blue-600 hover:text-black transition-all duration-300" onclick="runCmd('blue')">
                                 <span class="font-bold block flex items-center gap-2"><i data-lucide="shield" class="w-4 h-4"></i> COMMAND: BLUE</span>
-                                <span class="text-xs opacity-70 group-hover:text-black">Show Defensive Security Skills</span>
+                                <span class="text-xs opacity-70 group-hover:text-black">View Defensive Security Skills</span>
                             </button>
 
                             <button class="text-left group p-3 border border-yellow-600/50 bg-yellow-950/10 hover:bg-yellow-600 hover:text-black transition-all duration-300" onclick="runCmd('projects')">
