--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FRIENDS_OS // ROOT</title>
+    <title>FRIENDS_OS // guest</title>
     
     <!-- Tailwind CSS (No installation needed) -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -69,7 +69,7 @@
                     <h1 class="text-xl font-bold text-white tracking-wider glitch cursor-default">FRIENDS_OS</h1>
                     <div class="text-xs text-green-600 flex items-center gap-2">
                         <span class="w-2 h-2 bg-green-500 rounded-full animate-pulse"></span>
-                        UID: 0 (ROOT)
+                        UID: 1 (GUEST)
                     </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
 
                 <!-- Input Line -->
                 <div class="flex items-center gap-2 text-lg">
-                    <span class="text-green-500 font-bold whitespace-nowrap">root@friend:~$</span>
+                    <span class="text-green-500 font-bold whitespace-nowrap">guest@friend:~$</span>
                     <input id="cmd-input" type="text" class="bg-transparent border-none outline-none text-white flex-1 w-full caret-green-500" autocomplete="off" autofocus>
                 </div>
                 <div id="bottom-anchor"></div>
