--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             "Welcome back, friend.",
         ];
 
-        const GITHUB_USERNAME = "thewhateverwhatever"; // CHANGE THIS
+        const GITHUB_USERNAME = "whateving"; // CHANGE THIS
 
         // DOM Elements
         const bootScreen = document.getElementById('boot-screen');
