--- a/index.html
+++ b/index.html
@@ -271,7 +271,11 @@
                         <div class="border-l-2 border-green-500 pl-4">
                             <div class="text-white font-bold text-lg">USER: ROOT</div>
                             <div class="text-gray-400">Role: Cybersecurity Engineer</div>
-                            <div class="mt-2 text-xs text-gray-500">"I’m someone who loves understanding how systems behave, especially when they’re under attack. I explore cybersecurity through building tools, experimenting with system internals, completing hands-on labs, and studying modern threat techniques. My projects reflect how I learn: break it, study it, fix it, and secure it. I’m currently focused on threat detection, forensics, incident response, and defensive engineering."</div>
+                            <div class="mt-2 text-xs text-gray-500">"I’m someone who loves understanding how systems behave, especially when they’re under attack. I explore cybersecurity by building tools, experimenting with system internals, completing hands-on labs, and studying modern threat techniques. My approach is simple: break it, study it, fix it, secure it.
+I hold multiple industry certifications, including CompTIA Security+, CompTIA Linux+, CCNA, Google Cybersecurity, TryHackMe SOC Level 2, TryHackMe Red Teaming, and TryHackMe Web Fundamentals. I also hold a Bachelor’s degree in Cybersecurity & Networking from an American institution, backed by 4 years of IT experience.
+I’m ranked Top 40 globally on the Blue Team Labs Online platform and in the Top 1% on TryHackMe, reflecting my commitment to continuous, practical learning.
+My current focus is on threat detection, digital forensics, incident response, and defensive engineering. Outside of cybersecurity, I’m also pursuing a master’s degree in Finance & Economics, exploring the intersection of AI, markets, and security.
+"</div>
                         </div>
                     `);
                     break;
